force-app/main/default/objects/Agency_Performance__c/Agency_Performance__c.object-meta.xml
<CustomObject>
    <description>Data Sourced from IPR for visibility to Salesforce users</description>
    <label>Agency Performance</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>AP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>