force-app/main/default/objects/Agency_Performance__c/fields/Doubleup__c.field-meta.xml
<CustomField>
    <fullName>Doubleup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doubleup</label>
    <type>Checkbox</type>
</CustomField>