force-app/main/default/objects/Agency_Performance__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <label>FY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015-16</fullName>
            </value>
            <value>
                <fullName>2016-17</fullName>
            </value>
            <value>
                <fullName>2017-18</fullName>
            </value>
            <value>
                <fullName>2018-19</fullName>
            </value>
            <value>
                <fullName>2014-15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>