force-app/main/default/objects/Agency_Performance__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Month in Numerals</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Month in Numerals</inlineHelpText>
    <label>Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>