force-app/main/default/objects/Agency_Performance__c/fields/Multi_Name__c.field-meta.xml
<CustomField>
    <fullName>Multi_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Multi Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>