force-app/main/default/objects/Agency_Performance__c/fields/QF_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_VLY__c</fullName>
    <formula>(QF_MS_TY__c -  QF_MS_LY__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF VLY Ppts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>