force-app/main/default/objects/Agency_Performance__c/fields/Reported_Value__c.field-meta.xml
<CustomField>
    <fullName>Reported_Value__c</fullName>
    <label>Reported Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>