force-app/main/default/objects/Agency_Performance__c/fields/Reported_Value_LY__c.field-meta.xml
<CustomField>
    <fullName>Reported_Value_LY__c</fullName>
    <label>Reported Value (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>