force-app/main/default/objects/Agency_Performance__c/fields/VLY__c.field-meta.xml
<CustomField>
    <fullName>VLY__c</fullName>
    <formula>IF(Reported_Value_LY__c  != 0, (Reported_Value__c   /  Reported_Value_LY__c)-1,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>