force-app/main/default/objects/Agency_Performance__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Calendar Year</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Calendar Year</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>